--- a/app/reports/propertyReportf.jrxml
+++ b/app/reports/propertyReportf.jrxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.8.0.final using JasperReports Library version 6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="propertyReportf" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isSummaryWithPageHeaderAndFooter="true" uuid="1d127a37-26e0-4b8b-8997-2c9c46151eed">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
@@ -222,7 +223,7 @@ and a.asset_id=t.id and a.opt_answer_id=o.id and a.metaname_id=m.id and a.indica
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="25" splitType="Stretch">
+		<band height="23" splitType="Stretch">
 			<textField evaluationTime="Report">
 				<reportElement style="table_TD" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="0" y="0" width="52" height="23" uuid="414e8d6a-8370-4d54-a891-a052539f089b"/>
 				<box>
